# pre-commit-hooks

./: .gitignore  .pre-commit-hooks.yaml  setup.cfg
pre_commit_hooks/: sort_property_files.py
